add icons for features

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         </nav>
         <ul class="contacts-nav contacts-nav-menu">
           <li class="contacts-item link">
-            <a href="mailto:info@devstudio.com" class="contacts-link"
+            <a href="mailto:info@devstudio.com" class="contacts-link contacts-logo-list"
               >info@devstudio.com</a
             >
           </li>
           <li class="contacts-item link">
-            <a href="tel:+380961111111" class="contacts-link"
+            <a href="tel:+380961111111" class="contacts-link contacts-logo-phone"
               >+38 096 111 11 11</a
             >
           </li>
@@ -68,28 +68,28 @@
         <div class="container">
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="features-menu list">
-            <li class="features-item">
+            <li class="features-item features-item-antena">
               <h3 class="text-title">Внимание к деталям</h3>
               <p class="text-submit">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="features-item">
+            <li class="features-item features-item-clock">
               <h3 class="text-title">Пунктуальность</h3>
               <p class="text-submit">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="features-item">
+            <li class="features-item features-item-diagram">
               <h3 class="text-title">Планирование</h3>
               <p class="text-submit">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="features-item">
+            <li class="features-item features-item-astronavt">
               <h3 class="text-title">Современные технологии</h3>
               <p class="text-submit">
                 Значимость этих проблем настолько очевидна, что реализация
