--- a/index.html
+++ b/index.html
@@ -45,15 +45,23 @@
             <a
               href="mailto:info@devstudio.com"
               class="contacts-link contacts-logo-list"
-              >info@devstudio.com</a
+            >
+              <svg class="header-icon" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="contacts-item link">
             <a
               href="tel:+380961111111"
               class="contacts-link contacts-logo-phone"
-              >+38 096 111 11 11</a
             >
+              <svg class="header-icon" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -228,18 +236,18 @@
         </div>
       </section>
       <section class="clients">
-        <div class="conteiner">
+        <div class="container">
           <h2 class="clients-title">Постоянные клиенты</h2>
           <ul class="client-menu list">
-            <li>
-              <a href="">
+            <li class="client-item">
+              <a href="" class="client-link">
                 <svg class="client-icon">
                   <use href="./images/symbol-defs.svg#icon-union"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="">
+            <li class="client-item">
+              <a href="" class="client-link">
                 <svg class="client-icon">
                   <use
                     href="./images/symbol-defs.svg#icon-company-tag-line"
@@ -247,29 +255,29 @@
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="">
+            <li class="client-item">
+              <a href="" class="client-link">
                 <svg class="client-icon">
                   <use href="./images/symbol-defs.svg#icon-group"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="">
+            <li class="client-item">
+              <a href="" class="client-link">
                 <svg class="client-icon">
                   <use href="./images/symbol-defs.svg#icon-foster-peters"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="">
+            <li class="client-item">
+              <a href="" class="client-link">
                 <svg class="client-icon">
                   <use href="./images/symbol-defs.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="">
+            <li class="client-item">
+              <a href="" class="client-link">
                 <svg class="client-icon">
                   <use href="./images/symbol-defs.svg#icon-tag-line"></use>
                 </svg>
