--- a/portfolio.html
+++ b/portfolio.html
@@ -44,14 +44,26 @@
         </nav>
         <ul class="contacts-nav contacts-nav-menu">
           <li class="contacts-item link">
-            <a href="mailto:info@devstudio.com" class="contacts-link"
-              >info@devstudio.com</a
+            <a
+              href="mailto:info@devstudio.com"
+              class="contacts-link contacts-logo-list"
+            >
+              <svg class="header-icon" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="contacts-item link">
-            <a href="tel:+380961111111" class="contacts-link"
-              >+38 096 111 11 11</a
+            <a
+              href="tel:+380961111111"
+              class="contacts-link contacts-logo-phone"
             >
+              <svg class="header-icon" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -220,9 +232,10 @@
       </section>
     </main>
 
-       <!--Футер-->
-       <footer class="footer">
-        <div class="footer-conteiner container">
+    <!--Футер-->
+    <footer class="footer">
+      <div class="footer-container container">
+        <div class="address-container">
           <a class="footer-logo logo" href="./index.html" lang="en">
             Web<span class="accent-logo">Studio</span>
           </a>
@@ -251,7 +264,40 @@
             </ul>
           </address>
         </div>
-      </footer>
-    </body>
-  </html>
-  
+        <div class="social">
+          <h3 class="social-text-title">присоединяйтесь</h3>
+          <ul class="list social-menu">
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
