--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
               class="contacts-link contacts-logo-list"
             >
               <svg class="header-icon" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                <use href="./images/symbol-defs.svg#icon-leter"></use>
               </svg>
               info@devstudio.com</a
             >
