--- a/portfolio.html
+++ b/portfolio.html
@@ -101,131 +101,145 @@
           <!-- Примеры работ -->
           <ul class="work-list">
             <li class="work-list-item">
-              <img
-                class="work-portfolio-image"
-                src="./images/portfolio/web-site.jpg"
-                alt="Веб-сайт Технокряк"
-                width="370"
-                height="294"
-              />
-              <div class="description-card-wrapper">
-                <h2 class="title-portfolio">Технокряк</h2>
-                <p class="text-portfolio">Веб-сайт</p>
-              </div>
+              <a href="" class="work-list-link"> 
+                <img
+                  class="work-portfolio-image"
+                  src="./images/portfolio/web-site.jpg"
+                  alt="Веб-сайт Технокряк"
+                  width="370"
+                  height="294"
+                />
+                <div class="description-card-wrapper">
+                  <h2 class="title-portfolio">Технокряк</h2>
+                  <p class="text-portfolio">Веб-сайт</p>
+                </div></a
+              >
             </li>
             <li class="work-list-item">
-              <img
-                class="work-portfolio-image"
-                src="./images/portfolio/poster.jpg"
-                alt="Постер New Orlean vs Golden Star"
-                width="370"
-                height="294"
-              />
-              <div class="description-card-wrapper">
-                <h2 class="title-portfolio">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
-                </h2>
-                <p class="text-portfolio">Дизайн</p>
-              </div>
+              <a href="" class="work-list-link"
+                ><img
+                  class="work-portfolio-image"
+                  src="./images/portfolio/poster.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                  width="370"
+                  height="294"
+                />
+                <div class="description-card-wrapper">
+                  <h2 class="title-portfolio">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="text-portfolio">Дизайн</p>
+                </div></a
+              >
             </li>
             <li class="work-list-item">
-              <img
-                class="work-portfolio-image"
-                src="./images/portfolio/restaurant.jpg"
-                alt="Ресторан Seafood"
-                width="370"
-                height="294"
-              />
-              <div class="description-card-wrapper">
-                <h2 class="title-portfolio">Ресторан Seafood</h2>
-                <p class="text-portfolio">Приложение</p>
-              </div>
+              <a href="" class="work-list-link"
+                ><img
+                  class="work-portfolio-image"
+                  src="./images/portfolio/restaurant.jpg"
+                  alt="Ресторан Seafood"
+                  width="370"
+                  height="294"
+                />
+                <div class="description-card-wrapper">
+                  <h2 class="title-portfolio">Ресторан Seafood</h2>
+                  <p class="text-portfolio">Приложение</p>
+                </div></a
+              >
             </li>
             <li class="work-list-item">
-              <img
-                class="work-portfolio-image"
-                src="./images/portfolio/project-prime.jpg"
-                alt="Проект Prime"
-                width="370"
-                height="294"
-              />
-              <div class="description-card-wrapper">
-                <h2 class="title-portfolio">
-                  Проект <span lang="en">Prime</span>
-                </h2>
-                <p class="text-portfolio">Маркетинг</p>
-              </div>
+              <a href="" class="work-list-link"
+                ><img
+                  class="work-portfolio-image"
+                  src="./images/portfolio/project-prime.jpg"
+                  alt="Проект Prime"
+                  width="370"
+                  height="294"
+                />
+                <div class="description-card-wrapper">
+                  <h2 class="title-portfolio">
+                    Проект <span lang="en">Prime</span>
+                  </h2>
+                  <p class="text-portfolio">Маркетинг</p>
+                </div></a
+              >
             </li>
             <li class="work-list-item">
-              <img
-                class="work-portfolio-image"
-                src="./images/portfolio/project-boxes.jpg"
-                alt="Проект Boxes"
-              />
-              <div class="description-card-wrapper">
-                <h2 class="title-portfolio">
-                  Проект <span lang="en">Boxes</span>
-                </h2>
-                <p class="text-portfolio">Приложение</p>
-              </div>
+              <a href="" class="work-list-link"
+                ><img
+                  class="work-portfolio-image"
+                  src="./images/portfolio/project-boxes.jpg"
+                  alt="Проект Boxes"
+                />
+                <div class="description-card-wrapper">
+                  <h2 class="title-portfolio">
+                    Проект <span lang="en">Boxes</span>
+                  </h2>
+                  <p class="text-portfolio">Приложение</p>
+                </div></a
+              >
             </li>
             <li class="work-list-item">
-              <img
-                class="work-portfolio-image"
-                src="./images/portfolio/inspiration-has-no-border.jpg"
-                alt="Inspiration has no Borders"
-                width="370"
-                height="294"
-              />
-              <div class="description-card-wrapper">
-                <h2 class="title-portfolio" lang="en">
-                  Inspiration has no Borders
-                </h2>
-                <p class="text-portfolio">Веб-сайт</p>
-              </div>
+              <a href="" class="work-list-link"
+                ><img
+                  class="work-portfolio-image"
+                  src="./images/portfolio/inspiration-has-no-border.jpg"
+                  alt="Inspiration has no Borders"
+                  width="370"
+                  height="294"
+                />
+                <div class="description-card-wrapper">
+                  <h2 class="title-portfolio" lang="en">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="text-portfolio">Веб-сайт</p>
+                </div></a
+              >
             </li>
             <li class="work-list-item">
-              <img
-                class="work-portfolio-image"
-                src="./images/portfolio/limited-edition.jpg"
-                alt="Издание Limited Edition"
-                width="370"
-                height="294"
-              />
-              <div class="description-card-wrapper">
-                <h2 class="title-portfolio">
-                  Издание <span lang="en">Limited Edition</span>
-                </h2>
-                <p class="text-portfolio">Дизайн</p>
-              </div>
+              <a href="" class="work-list-link"
+                ><img
+                  class="work-portfolio-image"
+                  src="./images/portfolio/limited-edition.jpg"
+                  alt="Издание Limited Edition"
+                  width="370"
+                  height="294"
+                />
+                <div class="description-card-wrapper">
+                  <h2 class="title-portfolio">
+                    Издание <span lang="en">Limited Edition</span>
+                  </h2>
+                  <p class="text-portfolio">Дизайн</p>
+                </div></a
+              >
             </li>
             <li class="work-list-item">
-              <img
-                class="work-portfolio-image"
-                src="./images/portfolio/lab.jpg"
-                alt="Проект LAB"
-                width="370"
-                height="294"
-              />
-              <div class="description-card-wrapper">
-                <h2 class="title-portfolio">
-                  Проект <span lang="en">LAB</span>
-                </h2>
-                <p class="text-portfolio">Маркетинг</p>
-              </div>
+              <a href="" class="work-list-link"
+                ><img class="work-portfolio-image"
+                src="./images/portfolio/lab.jpg" alt="Проект LAB" width: auto;
+                height="294" />
+                <div class="description-card-wrapper">
+                  <h2 class="title-portfolio">
+                    Проект <span lang="en">LAB</span>
+                  </h2>
+                  <p class="text-portfolio">Маркетинг</p>
+                </div></a
+              >
             </li>
             <li class="work-list-item">
-              <img
-                class="work-portfolio-image"
-                src="./images/portfolio/gruving-business.jpg"
-                alt="Growing Business"
-                width="370"
-                height="294"
-              />
-              <div class="description-card-wrapper">
-                <h2 class="title-portfolio">Growing Business</h2>
-                <p class="text-portfolio">Приложение</p>
-              </div>
+              <a href="" class="work-list-link"
+                ><img
+                  class="work-portfolio-image"
+                  src="./images/portfolio/gruving-business.jpg"
+                  alt="Growing Business"
+                  width="370"
+                  height="294"
+                />
+                <div class="description-card-wrapper">
+                  <h2 class="title-portfolio">Growing Business</h2>
+                  <p class="text-portfolio">Приложение</p>
+                </div></a
+              >
             </li>
           </ul>
         </div>
@@ -265,7 +279,7 @@
           </address>
         </div>
         <div class="social">
-          <h3 class="social-text-title">присоединяйтесь</h3>
+          <p class="social-text-title">присоединяйтесь</p>
           <ul class="list social-menu">
             <li class="social-item">
               <a href="" class="social-link">
