--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               class="contacts-link contacts-logo-list"
             >
               <svg class="header-icon" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-leter"></use>
+                <use href="./images/sprite1.svg#icon-leter"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -58,7 +58,7 @@
               class="contacts-link contacts-logo-phone"
             >
               <svg class="header-icon" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                <use href="./images/sprite1.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11
             </a>
@@ -160,7 +160,7 @@
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use
-                          href="./images/symbol-defs.svg#icon-instagram"
+                          href="./images/sprite1.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -168,7 +168,7 @@
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/sprite1.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -176,7 +176,7 @@
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use
-                          href="./images/symbol-defs.svg#icon-facebook"
+                          href="./images/sprite1.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -185,7 +185,7 @@
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
+                          href="./images/sprite1.svg#icon-linkedin"
                         ></use>
                       </svg>
                     </a>
@@ -208,7 +208,7 @@
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use
-                          href="./images/symbol-defs.svg#icon-instagram"
+                          href="./images/sprite1.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -216,7 +216,7 @@
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/sprite1.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -224,7 +224,7 @@
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use
-                          href="./images/symbol-defs.svg#icon-facebook"
+                          href="./images/sprite1.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -233,7 +233,7 @@
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
+                          href="./images/sprite1.svg#icon-linkedin"
                         ></use>
                       </svg>
                     </a>
@@ -257,7 +257,7 @@
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use
-                          href="./images/symbol-defs.svg#icon-instagram"
+                          href="./images/sprite1.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -265,7 +265,7 @@
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/sprite1.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -273,7 +273,7 @@
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use
-                          href="./images/symbol-defs.svg#icon-facebook"
+                          href="./images/sprite1.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -282,7 +282,7 @@
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
+                          href="./images/sprite1.svg#icon-linkedin"
                         ></use>
                       </svg>
                     </a>
@@ -305,7 +305,7 @@
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use
-                          href="./images/symbol-defs.svg#icon-instagram"
+                          href="./images/sprite1.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -313,7 +313,7 @@
                   <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/sprite1.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -321,7 +321,7 @@
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use
-                          href="./images/symbol-defs.svg#icon-facebook"
+                          href="./images/sprite1.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -330,7 +330,7 @@
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
+                          href="./images/sprite1.svg#icon-linkedin"
                         ></use>
                       </svg>
                     </a>
@@ -341,6 +341,7 @@
           </ul>
         </div>
       </section>
+      <!-- Постоянные клиенты -->
       <section class="clients">
         <div class="container">
           <h2 class="clients-title">Постоянные клиенты</h2>
@@ -348,7 +349,7 @@
             <li class="client-item">
               <a class="client-link" href="" >
                 <svg class="client-icon" width="41" height="46.7">
-                  <use href="./images/symbol-defs.svg#icon-union"></use>
+                  <use href="./images/sprite1.svg#icon-logo-1"></use>
                 </svg>
               </a>
             </li>
@@ -357,7 +358,7 @@
                 <svg class="client-icon" width="40" height="52">
             
                   <use
-                    href="./images/symbol-defs.svg#icon-company-tag-line"
+                    href="./images/sprite1.svg#icon-logo-2"
                   ></use>
                 </svg>
               </a>
@@ -365,28 +366,28 @@
             <li class="client-item">
               <a class="client-link" href="" >
                 <svg class="client-icon" width="43.46" height="41.18">
-                  <use href="./images/symbol-defs.svg#icon-group"></use>
+                  <use href="./images/sprite1.svg#icon-logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <a class="client-link" href="" >
                 <svg class="client-icon" width="84.44" height="40.62">
-                  <use href="./images/symbol-defs.svg#icon-foster-peters"></use>
+                  <use href="./images/sprite1.svg#icon-logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <a class="client-link" href="" >
                 <svg class="client-icon" width="62.54" height="45.43">
-                  <use href="./images/symbol-defs.svg#icon-brand"></use>
+                  <use href="./images/sprite1.svg#icon-logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <a class="client-link" href="" >
                 <svg class="client-icon" width="93.79" height="43.93">
-                  <use href="./images/symbol-defs.svg#icon-tag-line"></use>
+                  <use href="./images/sprite1.svg#icon-logo-6"></use>
                 </svg>
               </a>
             </li>
@@ -433,28 +434,28 @@
             <li class="social-item">
               <a href="" class="social-link">
                 <svg class="social-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  <use href="./images/sprite1.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a href="" class="social-link">
                 <svg class="social-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/sprite1.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a href="" class="social-link">
                 <svg class="social-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./images/sprite1.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a href="" class="social-link">
                 <svg class="social-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  <use href="./images/sprite1.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
