--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
               class="contacts-link contacts-logo-list"
             >
               <svg class="header-icon" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-leter"></use>
+                <use href="./images/sprite1.svg#icon-leter"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -60,7 +60,7 @@
               class="contacts-link contacts-logo-phone"
             >
               <svg class="header-icon" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                <use href="./images/sprite1.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11
             </a>
