fix box-shadow .work-list-item

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
           </address>
         </div>
         <div class="social">
-          <h3 class="social-text-title">присоединяйтесь</h3>
+          <p class="social-text-title">присоединяйтесь</p>
           <ul class="list social-menu">
             <li class="social-item">
               <a href="" class="social-link">
