--- a/portfolio.html
+++ b/portfolio.html
@@ -102,13 +102,13 @@
           <ul class="work-list">
             <li class="work-list-item">
               <a class="work-list-link" href="">
-                  <img
-                    class="work-portfolio-image"
-                    src="./images/portfolio/web-site.jpg"
-                    alt="Веб-сайт Технокряк"
-                    width="370"
-                    height="294"
-                  />
+                <img
+                  class="work-portfolio-image"
+                  src="./images/portfolio/web-site.jpg"
+                  alt="Веб-сайт Технокряк"
+                  width="370"
+                  height="294"
+                />
                 <div class="description-card-wrapper">
                   <h2 class="title-portfolio">Технокряк</h2>
                   <p class="text-portfolio">Веб-сайт</p>
@@ -180,8 +180,8 @@
               >
             </li>
             <li class="work-list-item">
-              <a href="" class="work-list-link"
-                ><img
+              <a href="" class="work-list-link">
+                <img
                   class="work-portfolio-image"
                   src="./images/portfolio/inspiration-has-no-border.jpg"
                   alt="Inspiration has no Borders"
@@ -216,8 +216,10 @@
             <li class="work-list-item">
               <a href="" class="work-list-link"
                 ><img class="work-portfolio-image"
-                src="./images/portfolio/lab.jpg" alt="Проект LAB" width: auto;
-                height="294" />
+                src="./images/portfolio/lab.jpg" alt="Проект LAB" 
+                width="370"
+                height="294"
+              />
                 <div class="description-card-wrapper">
                   <h2 class="title-portfolio">
                     Проект <span lang="en">LAB</span>
